@@ -12,6 +12,7 @@ import com.sparrowwallet.drongo.policy.PolicyType;
 import com.sparrowwallet.drongo.protocol.ScriptType;
 import com.sparrowwallet.drongo.protocol.Sha256Hash;
 import com.sparrowwallet.drongo.psbt.PSBT;
+import com.sparrowwallet.drongo.silentpayments.SilentPaymentScanAddress;
 import com.sparrowwallet.drongo.wallet.*;
 import com.sparrowwallet.sparrow.AppServices;
 import com.sparrowwallet.sparrow.EventManager;
@@ -19,6 +20,7 @@ import com.sparrowwallet.sparrow.event.*;
 import com.sparrowwallet.sparrow.io.*;
 import com.sparrowwallet.sparrow.glyphfont.FontAwesome5;
 import com.sparrowwallet.sparrow.net.ElectrumServer;
+import com.sparrowwallet.sparrow.net.ServerType;
 import javafx.application.Platform;
 import javafx.beans.property.SimpleStringProperty;
 import javafx.beans.property.StringProperty;
@@ -51,7 +53,8 @@ public class DevicePane extends TitledDescriptionPane {
     private final Wallet wallet;
     private final PSBT psbt;
     private final OutputDescriptor outputDescriptor;
-    private final KeyDerivation keyDerivation;
+    private final KeyDerivation defaultDerivation;
+    private final KeyDerivation requiredDerivation;
     private final String message;
     private final List<StandardAccount> availableAccounts;
     private final Device device;
@@ -74,13 +77,14 @@ public class DevicePane extends TitledDescriptionPane {
 
     private boolean defaultDevice;
 
-    public DevicePane(Wallet wallet, Device device, boolean defaultDevice, KeyDerivation requiredDerivation) {
-        super(device.getModel().toDisplayString(), "", "", "image/" + device.getType() + ".png");
+    public DevicePane(Wallet wallet, Device device, boolean defaultDevice, KeyDerivation defaultDerivation, KeyDerivation requiredDerivation) {
+        super(device.getModel().toDisplayString(), "", "", device.getModel());
         this.deviceOperation = DeviceOperation.IMPORT;
         this.wallet = wallet;
         this.psbt = null;
         this.outputDescriptor = null;
-        this.keyDerivation = requiredDerivation;
+        this.defaultDerivation = defaultDerivation;
+        this.requiredDerivation = requiredDerivation;
         this.message = null;
         this.availableAccounts = null;
         this.device = device;
@@ -102,12 +106,13 @@ public class DevicePane extends TitledDescriptionPane {
     }
 
     public DevicePane(Wallet wallet, PSBT psbt, Device device, boolean defaultDevice) {
-        super(device.getModel().toDisplayString(), "", "", "image/" + device.getType() + ".png");
+        super(device.getModel().toDisplayString(), "", "", device.getModel());
         this.deviceOperation = DeviceOperation.SIGN;
         this.wallet = wallet;
         this.psbt = psbt;
         this.outputDescriptor = null;
-        this.keyDerivation = null;
+        this.defaultDerivation = null;
+        this.requiredDerivation = null;
         this.message = null;
         this.availableAccounts = null;
         this.device = device;
@@ -129,12 +134,13 @@ public class DevicePane extends TitledDescriptionPane {
     }
 
     public DevicePane(Wallet wallet, OutputDescriptor outputDescriptor, Device device, boolean defaultDevice) {
-        super(device.getModel().toDisplayString(), "", "", "image/" + device.getType() + ".png");
+        super(device.getModel().toDisplayString(), "", "", device.getModel());
         this.deviceOperation = DeviceOperation.DISPLAY_ADDRESS;
         this.wallet = wallet;
         this.psbt = null;
         this.outputDescriptor = outputDescriptor;
-        this.keyDerivation = null;
+        this.defaultDerivation = null;
+        this.requiredDerivation = null;
         this.message = null;
         this.availableAccounts = null;
         this.device = device;
@@ -151,13 +157,14 @@ public class DevicePane extends TitledDescriptionPane {
         buttonBox.getChildren().addAll(setPassphraseButton, displayAddressButton);
     }
 
-    public DevicePane(Wallet wallet, String message, KeyDerivation keyDerivation, Device device, boolean defaultDevice) {
-        super(device.getModel().toDisplayString(), "", "", "image/" + device.getType() + ".png");
+    public DevicePane(Wallet wallet, String message, KeyDerivation requiredDerivation, Device device, boolean defaultDevice) {
+        super(device.getModel().toDisplayString(), "", "", device.getModel());
         this.deviceOperation = DeviceOperation.SIGN_MESSAGE;
         this.wallet = wallet;
         this.psbt = null;
         this.outputDescriptor = null;
-        this.keyDerivation = keyDerivation;
+        this.defaultDerivation = requiredDerivation;
+        this.requiredDerivation = requiredDerivation;
         this.message = message;
         this.availableAccounts = null;
         this.device = device;
@@ -179,12 +186,13 @@ public class DevicePane extends TitledDescriptionPane {
     }
 
     public DevicePane(Wallet wallet, List<StandardAccount> availableAccounts, Device device, boolean defaultDevice) {
-        super(device.getModel().toDisplayString(), "", "", "image/" + device.getType() + ".png");
+        super(device.getModel().toDisplayString(), "", "", device.getModel());
         this.deviceOperation = DeviceOperation.DISCOVER_KEYSTORES;
         this.wallet = wallet;
         this.psbt = null;
         this.outputDescriptor = null;
-        this.keyDerivation = null;
+        this.defaultDerivation = null;
+        this.requiredDerivation = null;
         this.message = null;
         this.device = device;
         this.defaultDevice = defaultDevice;
@@ -202,12 +210,13 @@ public class DevicePane extends TitledDescriptionPane {
     }
 
     public DevicePane(DeviceOperation deviceOperation, Device device, boolean defaultDevice) {
-        super(device.getModel().toDisplayString(), "", "", "image/" + device.getType() + ".png");
+        super(device.getModel().toDisplayString(), "", "", device.getModel());
         this.deviceOperation = deviceOperation;
         this.wallet = null;
         this.psbt = null;
         this.outputDescriptor = null;
-        this.keyDerivation = null;
+        this.defaultDerivation = null;
+        this.requiredDerivation = null;
         this.message = null;
         this.device = device;
         this.defaultDevice = defaultDevice;
@@ -286,27 +295,50 @@ public class DevicePane extends TitledDescriptionPane {
     }
 
     private void createImportButton() {
-        importButton = keyDerivation == null ? new SplitMenuButton() : new Button();
+        importButton = requiredDerivation == null ? new SplitMenuButton() : new Button();
         importButton.setAlignment(Pos.CENTER_RIGHT);
         importButton.setText("Import Keystore");
         importButton.setOnAction(event -> {
             importButton.setDisable(true);
-            List<ChildNumber> defaultDerivation = wallet.getScriptType() == null ? ScriptType.P2WPKH.getDefaultDerivation() : wallet.getScriptType().getDefaultDerivation();
-            importKeystore(keyDerivation == null ? defaultDerivation : keyDerivation.getDerivation());
+            importKeystore(requiredDerivation == null ? getDefaultDerivation() : requiredDerivation.getDerivation());
         });
 
         if(importButton instanceof SplitMenuButton importMenuButton) {
             if(wallet.getScriptType() == null) {
-                ScriptType[] scriptTypes = new ScriptType[] {ScriptType.P2WPKH, ScriptType.P2SH_P2WPKH, ScriptType.P2PKH, ScriptType.P2TR};
-                for(ScriptType scriptType : scriptTypes) {
-                    MenuItem item = new MenuItem(scriptType.getDescription());
-                    final List<ChildNumber> derivation = scriptType.getDefaultDerivation();
-                    item.setOnAction(event -> {
-                        importMenuButton.setDisable(true);
-                        importKeystore(derivation);
-                    });
-                    importMenuButton.getItems().add(item);
+                if(wallet.getPolicyType() == null) {
+                    List<PolicyAndScriptType> types = new ArrayList<>();
+                    for(PolicyType policyType : List.of(PolicyType.SINGLE_HD, PolicyType.SINGLE_SP)) {
+                        for(ScriptType scriptType : ScriptType.getAddressableScriptTypes(policyType)) {
+                            types.add(new PolicyAndScriptType(policyType, scriptType));
+                        }
+                    }
+                    for(PolicyAndScriptType type : types) {
+                        MenuItem item = new MenuItem(type.getDescription());
+                        final List<ChildNumber> derivation = type.scriptType().getDefaultDerivation();
+                        item.setOnAction(event -> {
+                            importMenuButton.setDisable(true);
+                            wallet.setPolicyType(type.policyType());
+                            importKeystore(derivation);
+                        });
+                        importMenuButton.getItems().add(item);
+                    }
+                } else {
+                    List<ScriptType> scriptTypes = ScriptType.getScriptTypesForPolicyType(wallet.getPolicyType());
+                    for(ScriptType scriptType : scriptTypes) {
+                        MenuItem item = new MenuItem(scriptType.getDescription());
+                        final List<ChildNumber> derivation = scriptType.getDefaultDerivation();
+                        item.setOnAction(event -> {
+                            importMenuButton.setDisable(true);
+                            importKeystore(derivation);
+                        });
+                        importMenuButton.getItems().add(item);
+                    }
                 }
+                importMenuButton.getItems().add(new SeparatorMenuItem());
+                MenuItem discoverItem = new MenuItem("Discover Wallet...");
+                discoverItem.setDisable(!AppServices.isConnected());
+                discoverItem.setOnAction(_ -> discoverWallet());
+                importMenuButton.getItems().add(discoverItem);
             } else {
                 String[] accounts = new String[] {"Default Account #0", "Account #1", "Account #2", "Account #3", "Account #4", "Account #5", "Account #6", "Account #7", "Account #8", "Account #9"};
                 int scriptAccountsLength = ScriptType.P2SH.equals(wallet.getScriptType()) ? 1 : accounts.length;
@@ -363,7 +395,7 @@ public class DevicePane extends TitledDescriptionPane {
         signMessageButton.managedProperty().bind(signMessageButton.visibleProperty());
         signMessageButton.setVisible(false);
 
-        if(device.getFingerprint() != null && !device.getFingerprint().equals(keyDerivation.getMasterFingerprint())) {
+        if(device.getFingerprint() != null && !device.getFingerprint().equals(requiredDerivation.getMasterFingerprint())) {
             signMessageButton.setDisable(true);
         }
     }
@@ -372,7 +404,6 @@ public class DevicePane extends TitledDescriptionPane {
         discoverKeystoresButton = new Button("Discover");
         discoverKeystoresButton.setAlignment(Pos.CENTER_RIGHT);
         discoverKeystoresButton.setOnAction(event -> {
-            discoverKeystoresButton.setDisable(true);
             discoverKeystores();
         });
         discoverKeystoresButton.managedProperty().bind(discoverKeystoresButton.visibleProperty());
@@ -433,6 +464,14 @@ public class DevicePane extends TitledDescriptionPane {
         getAddressButton.setVisible(false);
     }
 
+    private List<ChildNumber> getDefaultDerivation() {
+        if(defaultDerivation != null && !defaultDerivation.getDerivation().isEmpty()) {
+            return defaultDerivation.getDerivation();
+        }
+
+        return wallet == null || wallet.getScriptType() == null ? ScriptType.P2WPKH.getDefaultDerivation() : wallet.getScriptType().getDefaultDerivation();
+    }
+
     private void unlock(Device device) {
         if(device.getModel().requiresPinPrompt()) {
             promptPin();
@@ -453,20 +492,26 @@ public class DevicePane extends TitledDescriptionPane {
         });
         vBox.getChildren().addAll(pinField, enterPinButton);
 
-        TilePane tilePane = new TilePane();
-        tilePane.setPrefColumns(3);
-        tilePane.setHgap(10);
-        tilePane.setVgap(10);
-        tilePane.setMaxWidth(150);
-        tilePane.setMaxHeight(120);
+        GridPane gridPane = new GridPane();
+        gridPane.setHgap(10);
+        gridPane.setVgap(10);
+        gridPane.setMaxWidth(150);
+        gridPane.setMaxHeight(device.getModel().hasZeroInPin() ? 160 : 120);
 
-        int[] digits = new int[] {7, 8, 9, 4, 5, 6, 1, 2, 3};
+        int[] digits = device.getModel().hasZeroInPin() ? new int[] {7, 8, 9, 4, 5, 6, 1, 2, 3, 0} : new int[] {7, 8, 9, 4, 5, 6, 1, 2, 3};
         for(int i = 0; i < digits.length; i++) {
             Button pinButton = new Button();
             Glyph circle = new Glyph(FontAwesome5.FONT_NAME, "CIRCLE");
             pinButton.setGraphic(circle);
             pinButton.setUserData(digits[i]);
-            tilePane.getChildren().add(pinButton);
+            GridPane.setRowIndex(pinButton, i / 3);
+            GridPane.setColumnIndex(pinButton, i % 3);
+            if((i / 3) == 3) {
+                GridPane.setHgrow(pinButton, Priority.ALWAYS);
+                GridPane.setColumnSpan(pinButton, 3);
+                pinButton.setMaxWidth(Double.MAX_VALUE);
+            }
+            gridPane.getChildren().add(pinButton);
             pinButton.setOnAction(event -> {
                 pinField.setText(pinField.getText() + pinButton.getUserData());
             });
@@ -474,7 +519,7 @@ public class DevicePane extends TitledDescriptionPane {
 
         HBox contentBox = new HBox();
         contentBox.setSpacing(50);
-        contentBox.getChildren().add(tilePane);
+        contentBox.getChildren().add(gridPane);
         contentBox.getChildren().add(vBox);
         contentBox.setPadding(new Insets(10, 0, 10, 0));
         contentBox.setAlignment(Pos.TOP_CENTER);
@@ -494,7 +539,7 @@ public class DevicePane extends TitledDescriptionPane {
 
         SplitMenuButton sendPassphraseButton = new SplitMenuButton();
         sendPassphraseButton.setText("Send Passphrase");
-        sendPassphraseButton.getStyleClass().add("default-button");
+        setDefaultButton(sendPassphraseButton);
         sendPassphraseButton.setOnAction(event -> {
             setExpanded(false);
             setDescription("Confirm passphrase on device...");
@@ -686,7 +731,7 @@ public class DevicePane extends TitledDescriptionPane {
                     return;
                 }
 
-                Service<Keystore> importService = cardApi.getImportService(derivation, messageProperty);
+                Service<Keystore> importService = cardApi.getImportService(wallet.getPolicyType(), derivation, messageProperty);
                 handleCardOperation(importService, importButton, "Import", true, event -> {
                     importKeystore(derivation, importService.getValue());
                 });
@@ -705,13 +750,21 @@ public class DevicePane extends TitledDescriptionPane {
                     }
                 }
 
-                importXpub(derivation);
+                importKey(derivation);
             });
             enumerateService.setOnFailed(workerStateEvent -> {
                 setError("Error", enumerateService.getException().getMessage());
                 importButton.setDisable(false);
             });
             enumerateService.start();
+        } else {
+            importKey(derivation);
+        }
+    }
+
+    private void importKey(List<ChildNumber> derivation) {
+        if(wallet != null && wallet.getPolicyType() == PolicyType.SINGLE_SP) {
+            importSpscan(derivation);
         } else {
             importXpub(derivation);
         }
@@ -722,7 +775,7 @@ public class DevicePane extends TitledDescriptionPane {
 
         Hwi.GetXpubService getXpubService = new Hwi.GetXpubService(device, passphrase.get(), derivationPath);
         getXpubService.setOnSucceeded(workerStateEvent -> {
-            String xpub = getXpubService.getValue();
+            ExtendedKey xpub = getXpubService.getValue();
 
             try {
                 Keystore keystore = new Keystore();
@@ -730,7 +783,7 @@ public class DevicePane extends TitledDescriptionPane {
                 keystore.setSource(KeystoreSource.HW_USB);
                 keystore.setWalletModel(device.getModel());
                 keystore.setKeyDerivation(new KeyDerivation(device.getFingerprint(), derivationPath));
-                keystore.setExtendedPublicKey(ExtendedKey.fromDescriptor(xpub));
+                keystore.setExtendedPublicKey(xpub);
 
                 importKeystore(derivation, keystore);
             } catch(Exception e) {
@@ -746,14 +799,44 @@ public class DevicePane extends TitledDescriptionPane {
         getXpubService.start();
     }
 
+    private void importSpscan(List<ChildNumber> derivation) {
+        String derivationPath = KeyDerivation.writePath(derivation);
+
+        Hwi.GetSpscanService getSpscanService = new Hwi.GetSpscanService(device, passphrase.get(), derivationPath);
+        getSpscanService.setOnSucceeded(workerStateEvent -> {
+            SilentPaymentScanAddress spscan = getSpscanService.getValue();
+
+            try {
+                Keystore keystore = new Keystore();
+                keystore.setLabel(device.getModel().toDisplayString());
+                keystore.setSource(KeystoreSource.HW_USB);
+                keystore.setWalletModel(device.getModel());
+                keystore.setKeyDerivation(new KeyDerivation(device.getFingerprint(), derivationPath));
+                keystore.setSilentPaymentScanAddress(spscan);
+
+                importKeystore(derivation, keystore);
+            } catch(Exception e) {
+                setError("Could not retrieve spscan", e.getMessage());
+            }
+        });
+        getSpscanService.setOnFailed(workerStateEvent -> {
+            setError("Could not retrieve spscan", getSpscanService.getException().getMessage());
+            importButton.setDisable(false);
+        });
+        setDescription("Importing...");
+        showHideLink.setVisible(false);
+        getSpscanService.start();
+    }
+
     private void importKeystore(List<ChildNumber> derivation, Keystore keystore) {
         if(wallet.getScriptType() == null) {
-            ScriptType scriptType = Arrays.stream(ScriptType.ADDRESSABLE_TYPES).filter(type -> type.getDefaultDerivation().get(0).equals(derivation.get(0))).findFirst().orElse(ScriptType.P2PKH);
+            ScriptType scriptType = Arrays.stream(ScriptType.ADDRESSABLE_TYPES).filter(type -> type.getDefaultDerivation().getFirst().equals(derivation.getFirst())).findFirst().orElse(ScriptType.P2PKH);
+            PolicyType policyType = wallet.getPolicyType() != null ? wallet.getPolicyType() : PolicyType.SINGLE_HD;
             wallet.setName(device.getModel().toDisplayString());
-            wallet.setPolicyType(PolicyType.SINGLE);
+            wallet.setPolicyType(policyType);
             wallet.setScriptType(scriptType);
             wallet.getKeystores().add(keystore);
-            wallet.setDefaultPolicy(Policy.getPolicy(PolicyType.SINGLE, scriptType, wallet.getKeystores(), null));
+            wallet.setDefaultPolicy(Policy.getPolicy(policyType, scriptType, wallet.getKeystores(), null));
 
             EventManager.get().post(new WalletImportEvent(wallet));
         } else {
@@ -858,7 +941,7 @@ public class DevicePane extends TitledDescriptionPane {
         if(device.isCard()) {
             try {
                 CardApi cardApi = CardApi.getCardApi(device.getModel(), pin.get());
-                Service<String> signMessageService = cardApi.getSignMessageService(message, wallet.getScriptType(), keyDerivation.getDerivation(), messageProperty);
+                Service<String> signMessageService = cardApi.getSignMessageService(message, wallet.getScriptType(), requiredDerivation.getDerivation(), messageProperty);
                 handleCardOperation(signMessageService, signMessageButton, "Signing", true, event -> {
                     String signature = signMessageService.getValue();
                     EventManager.get().post(new MessageSignedEvent(wallet, signature));
@@ -869,7 +952,7 @@ public class DevicePane extends TitledDescriptionPane {
                 signButton.setDisable(false);
             }
         } else {
-            Hwi.SignMessageService signMessageService = new Hwi.SignMessageService(device, passphrase.get(), message, keyDerivation.getDerivationPath());
+            Hwi.SignMessageService signMessageService = new Hwi.SignMessageService(device, passphrase.get(), message, requiredDerivation.getDerivationPath());
             signMessageService.setOnSucceeded(successEvent -> {
                 String signature = signMessageService.getValue();
                 EventManager.get().post(new MessageSignedEvent(wallet, signature));
@@ -883,37 +966,141 @@ public class DevicePane extends TitledDescriptionPane {
         }
     }
 
+    private void discoverWallet() {
+        importButton.setDisable(true);
+        importButton.setMaxHeight(importButton.getHeight());
+        ProgressIndicator progressIndicator = new ProgressIndicator(0);
+        progressIndicator.getStyleClass().add("button-progress");
+        importButton.setGraphic(progressIndicator);
+        List<Wallet> wallets = new ArrayList<>();
+
+        RangeInputDialog rangeInputDialog = new RangeInputDialog(StandardAccount.ACCOUNT_0.getAccountNumber(), StandardAccount.ACCOUNT_30.getAccountNumber(), StandardAccount.ACCOUNT_10.getAccountNumber());
+        rangeInputDialog.setTitle("Choose number of accounts");
+        rangeInputDialog.setHeaderText("Enter the number of additional accounts to scan for existing funds.\n\nThis may take a few minutes depending on how many accounts are selected.");
+        Optional<Integer> optRange = rangeInputDialog.showAndWait();
+        if(optRange.isEmpty()) {
+            return;
+        }
+
+        List<StandardAccount> discoveryAccounts = new ArrayList<>(Arrays.asList(StandardAccount.values()).subList(0, optRange.get() + 1));
+        Map<Hwi.WalletType, String> derivationPaths = new LinkedHashMap<>();
+        List<ScriptType> scriptTypes = new ArrayList<>(ScriptType.getAddressableScriptTypes(PolicyType.SINGLE_HD));
+        if(device.getModel() == WalletModel.BITBOX_02) {
+            scriptTypes.remove(ScriptType.P2PKH);
+        }
+        for(ScriptType scriptType : scriptTypes) {
+            for(StandardAccount discoveryAccount : discoveryAccounts) {
+                derivationPaths.put(new Hwi.WalletType(scriptType, discoveryAccount), KeyDerivation.writePath(scriptType.getDefaultDerivation(discoveryAccount.getAccountNumber())));
+            }
+        }
+
+        Hwi.GetXpubsService getXpubsService = new Hwi.GetXpubsService(device, passphrase.get(), derivationPaths);
+        getXpubsService.setOnSucceeded(_ -> {
+            Map<Hwi.WalletType, ExtendedKey> accountXpubs = getXpubsService.getValue();
+
+            for(Map.Entry<Hwi.WalletType, ExtendedKey> entry : accountXpubs.entrySet()) {
+                try {
+                    Wallet wallet = new Wallet(device.getModel().toDisplayString());
+                    wallet.setPolicyType(PolicyType.SINGLE_HD);
+                    wallet.setScriptType(entry.getKey().scriptType());
+                    Keystore keystore = new Keystore();
+                    keystore.setLabel(device.getModel().toDisplayString());
+                    keystore.setSource(KeystoreSource.HW_USB);
+                    keystore.setWalletModel(device.getModel());
+                    keystore.setKeyDerivation(new KeyDerivation(device.getFingerprint(), derivationPaths.get(entry.getKey())));
+                    keystore.setExtendedPublicKey(entry.getValue());
+                    wallet.getKeystores().add(keystore);
+                    wallet.setDefaultPolicy(Policy.getPolicy(PolicyType.SINGLE_HD, entry.getKey().scriptType(), wallet.getKeystores(), 1));
+                    if(entry.getKey().standardAccount().equals(StandardAccount.ACCOUNT_0)) {
+                        wallets.add(wallet);
+                    } else {
+                        Wallet masterWallet = wallets.getLast();
+                        wallet.setName(entry.getKey().standardAccount().getName());
+                        wallet.setMasterWallet(masterWallet);
+                        masterWallet.getChildWallets().add(wallet);
+                    }
+                } catch(Exception e) {
+                    setError("Could not retrieve xpub", e.getMessage());
+                }
+            }
+
+            ElectrumServer.WalletDiscoveryService walletDiscoveryService = new ElectrumServer.WalletDiscoveryService(wallets);
+            walletDiscoveryService.setOnSucceeded(_ -> {
+                importButton.setGraphic(null);
+                Optional<List<Wallet>> optWallets = walletDiscoveryService.getValue();
+                if(optWallets.isPresent()) {
+                    List<Wallet> discoveredWallets = optWallets.get();
+                    if(discoveredWallets.size() > 1) {
+                        for(Wallet wallet : discoveredWallets) {
+                            wallet.setName(wallet.getName() + " " + wallet.getScriptType().getDescription());
+                        }
+                    }
+                    EventManager.get().post(new WalletImportEvent(discoveredWallets));
+                } else {
+                    AppServices.showErrorDialog("No existing wallet found",
+                            Config.get().getServerType() == ServerType.BITCOIN_CORE ? "The configured server type is Bitcoin Core, which does not support wallet discovery.\n\n" +
+                                    "You can however import the " + device.getModel().toDisplayString() + " and scan the blockchain by supplying a start date." :
+                                    "Could not find an HD wallet with existing transactions using the " + device.getModel().toDisplayString() + ".");
+                    setDefaultStatus();
+                    importButton.setDisable(false);
+                }
+            });
+            walletDiscoveryService.setOnFailed(failedEvent -> {
+                log.error("Failed to discover wallets", failedEvent.getSource().getException());
+                setError("Failed to discover wallets", failedEvent.getSource().getException().getMessage());
+                importButton.setGraphic(null);
+                importButton.setDisable(false);
+            });
+            walletDiscoveryService.start();
+        });
+        getXpubsService.setOnFailed(_ -> {
+            setError("Could not retrieve xpub", getXpubsService.getException().getMessage());
+            importButton.setGraphic(null);
+            importButton.setDisable(false);
+        });
+        progressIndicator.progressProperty().bind(getXpubsService.progressProperty());
+        getXpubsService.progressProperty().addListener((_, _, newValue) -> setDescription("Discovering... (" + Math.round(newValue.doubleValue() * 100) + "%)"));
+        showHideLink.setVisible(false);
+        getXpubsService.start();
+    }
+
     private void discoverKeystores() {
         if(wallet.getKeystores().size() != 1) {
             setError("Could not discover keystores", "Only single signature wallets are supported for keystore discovery");
             return;
         }
 
+        discoverKeystoresButton.setDisable(true);
+        discoverKeystoresButton.setMaxHeight(discoverKeystoresButton.getHeight());
+        ProgressIndicator progressIndicator = new ProgressIndicator(0);
+        progressIndicator.getStyleClass().add("button-progress");
+        discoverKeystoresButton.setGraphic(progressIndicator);
+
         String masterFingerprint = wallet.getKeystores().get(0).getKeyDerivation().getMasterFingerprint();
 
         Wallet copyWallet = wallet.copy();
-        Map<StandardAccount, String> accountDerivationPaths = new LinkedHashMap<>();
+        Map<Hwi.WalletType, String> accountDerivationPaths = new LinkedHashMap<>();
         for(StandardAccount availableAccount : availableAccounts) {
             Wallet availableWallet = copyWallet.addChildWallet(availableAccount);
             Keystore availableKeystore = availableWallet.getKeystores().get(0);
             String derivationPath = availableKeystore.getKeyDerivation().getDerivationPath();
-            accountDerivationPaths.put(availableAccount, derivationPath);
+            accountDerivationPaths.put(new Hwi.WalletType(wallet.getScriptType(), availableAccount), derivationPath);
         }
 
         Map<StandardAccount, Keystore> importedKeystores = new LinkedHashMap<>();
         Hwi.GetXpubsService getXpubsService = new Hwi.GetXpubsService(device, passphrase.get(), accountDerivationPaths);
         getXpubsService.setOnSucceeded(workerStateEvent -> {
-            Map<StandardAccount, String> accountXpubs = getXpubsService.getValue();
+            Map<Hwi.WalletType, ExtendedKey> accountXpubs = getXpubsService.getValue();
 
-            for(Map.Entry<StandardAccount, String> entry : accountXpubs.entrySet()) {
+            for(Map.Entry<Hwi.WalletType, ExtendedKey> entry : accountXpubs.entrySet()) {
                 try {
                     Keystore keystore = new Keystore();
                     keystore.setLabel(device.getModel().toDisplayString());
                     keystore.setSource(KeystoreSource.HW_USB);
                     keystore.setWalletModel(device.getModel());
                     keystore.setKeyDerivation(new KeyDerivation(masterFingerprint, accountDerivationPaths.get(entry.getKey())));
-                    keystore.setExtendedPublicKey(ExtendedKey.fromDescriptor(entry.getValue()));
-                    importedKeystores.put(entry.getKey(), keystore);
+                    keystore.setExtendedPublicKey(entry.getValue());
+                    importedKeystores.put(entry.getKey().standardAccount(), keystore);
                 } catch(Exception e) {
                     setError("Could not retrieve xpub", e.getMessage());
                 }
@@ -927,15 +1114,18 @@ public class DevicePane extends TitledDescriptionPane {
             accountDiscoveryService.setOnFailed(event -> {
                 log.error("Failed to discover accounts", event.getSource().getException());
                 setError("Failed to discover accounts", event.getSource().getException().getMessage());
+                discoverKeystoresButton.setGraphic(null);
                 discoverKeystoresButton.setDisable(false);
             });
             accountDiscoveryService.start();
         });
         getXpubsService.setOnFailed(workerStateEvent -> {
             setError("Could not retrieve xpub", getXpubsService.getException().getMessage());
+            discoverKeystoresButton.setGraphic(null);
             discoverKeystoresButton.setDisable(false);
         });
-        setDescription("Discovering...");
+        progressIndicator.progressProperty().bind(getXpubsService.progressProperty());
+        getXpubsService.progressProperty().addListener((_, _, newValue) -> setDescription("Discovering... (" + Math.round(newValue.doubleValue() * 100) + "%)"));
         showHideLink.setVisible(false);
         getXpubsService.start();
     }
@@ -992,13 +1182,12 @@ public class DevicePane extends TitledDescriptionPane {
     private void showOperationButton() {
         if(deviceOperation.equals(DeviceOperation.IMPORT)) {
             if(defaultDevice) {
-                importButton.getStyleClass().add("default-button");
+                setDefaultButton(importButton);
             }
             importButton.setVisible(true);
             showHideLink.setText("Show derivation...");
             showHideLink.setVisible(!device.isCard());
-            List<ChildNumber> defaultDerivation = wallet.getScriptType() == null ? ScriptType.P2WPKH.getDefaultDerivation() : wallet.getScriptType().getDefaultDerivation();
-            setContent(getDerivationEntry(keyDerivation == null ? defaultDerivation : keyDerivation.getDerivation()));
+            setContent(getDerivationEntry(requiredDerivation == null ? getDefaultDerivation() : requiredDerivation.getDerivation()));
         } else if(deviceOperation.equals(DeviceOperation.SIGN)) {
             signButton.setDefaultButton(defaultDevice);
             signButton.setVisible(true);
@@ -1017,7 +1206,7 @@ public class DevicePane extends TitledDescriptionPane {
             showHideLink.setVisible(false);
         } else if(deviceOperation.equals(DeviceOperation.GET_PRIVATE_KEY)) {
             if(defaultDevice) {
-                getPrivateKeyButton.getStyleClass().add("default-button");
+                setDefaultButton(getPrivateKeyButton);
             }
             getPrivateKeyButton.setVisible(true);
             showHideLink.setVisible(false);
@@ -1032,7 +1221,7 @@ public class DevicePane extends TitledDescriptionPane {
         TextField derivationField = new TextField();
         derivationField.setPromptText("Derivation path");
         derivationField.setText(KeyDerivation.writePath(derivation));
-        derivationField.setDisable(device.isCard() || keyDerivation != null);
+        derivationField.setDisable(device.isCard() || requiredDerivation != null);
         HBox.setHgrow(derivationField, Priority.ALWAYS);
 
         ValidationSupport validationSupport = new ValidationSupport();
@@ -1048,7 +1237,7 @@ public class DevicePane extends TitledDescriptionPane {
             showHideLink.setVisible(true);
             setExpanded(false);
             List<ChildNumber> importDerivation = KeyDerivation.parsePath(derivationField.getText());
-            importXpub(importDerivation);
+            importKey(importDerivation);
         });
 
         derivationField.textProperty().addListener((observable, oldValue, newValue) -> {
@@ -1223,5 +1412,11 @@ public class DevicePane extends TitledDescriptionPane {
 
     public enum DeviceOperation {
         IMPORT, SIGN, DISPLAY_ADDRESS, SIGN_MESSAGE, DISCOVER_KEYSTORES, GET_PRIVATE_KEY, GET_ADDRESS;
+    }
+
+    protected record PolicyAndScriptType(PolicyType policyType, ScriptType scriptType) {
+        public String getDescription() {
+            return scriptType.getDescription() + (policyType == PolicyType.SINGLE_SP ? " SP" : " HD");
+        }
     }
 }
