@@ -2,14 +2,12 @@ package com.sparrowwallet.sparrow.payjoin;
 
 import com.google.common.collect.ImmutableMap;
 import com.google.gson.Gson;
+import com.google.gson.JsonSyntaxException;
 import com.sparrowwallet.drongo.protocol.Script;
 import com.sparrowwallet.drongo.protocol.Transaction;
 import com.sparrowwallet.drongo.protocol.TransactionInput;
 import com.sparrowwallet.drongo.protocol.TransactionOutput;
-import com.sparrowwallet.drongo.psbt.PSBT;
-import com.sparrowwallet.drongo.psbt.PSBTInput;
-import com.sparrowwallet.drongo.psbt.PSBTOutput;
-import com.sparrowwallet.drongo.psbt.PSBTParseException;
+import com.sparrowwallet.drongo.psbt.*;
 import com.sparrowwallet.drongo.uri.BitcoinURI;
 import com.sparrowwallet.drongo.wallet.Wallet;
 import com.sparrowwallet.drongo.wallet.WalletNode;
@@ -38,7 +36,11 @@ public class Payjoin {
     public Payjoin(BitcoinURI payjoinURI, Wallet wallet, PSBT psbt) {
         this.payjoinURI = payjoinURI;
         this.wallet = wallet;
-        this.psbt = psbt;
+        this.psbt = psbt.getForExport();
+
+        if(payjoinURI.getAddress() == null) {
+            throw new IllegalArgumentException("Payjoin URI must have an address");
+        }
 
         for(PSBTInput psbtInput : psbt.getPsbtInputs()) {
             if(psbtInput.getUtxo() == null) {
@@ -51,7 +53,7 @@ public class Payjoin {
         }
     }
 
-    public PSBT requestPayjoinPSBT(boolean allowOutputSubstitution) throws PayjoinReceiverException {
+    public PSBT requestPayjoinPSBT(boolean allowOutputSubstitution) throws PayjoinReceiverException, PSBTProofException {
         if(!payjoinURI.isPayjoinOutputSubstitutionAllowed()) {
             allowOutputSubstitution = false;
         }
@@ -62,15 +64,18 @@ public class Payjoin {
             throw new PayjoinReceiverException("No payjoin URL provided");
         }
 
+        long additionalFeeContribution = getAdditionalFeeContribution();
+
         try {
             String base64Psbt = psbt.getPublicCopy().toBase64String();
 
-            String appendQuery = "v=1&minfeerate=" + AppServices.getMinimumRelayFeeRate();
+            double minFeeRate = AppServices.getMinimumRelayFeeRate();
+            String appendQuery = "v=1&minfeerate=" + minFeeRate;
             int changeOutputIndex = getChangeOutputIndex();
             long maxAdditionalFeeContribution = 0;
             if(changeOutputIndex > -1) {
                 appendQuery += "&additionalfeeoutputindex=" + changeOutputIndex;
-                maxAdditionalFeeContribution = getAdditionalFeeContribution();
+                maxAdditionalFeeContribution = additionalFeeContribution;
                 appendQuery += "&maxadditionalfeecontribution=" + maxAdditionalFeeContribution;
             }
 
@@ -84,12 +89,16 @@ public class Payjoin {
 
             String response = httpClientService.postString(finalUri.toString(), null, "text/plain", base64Psbt);
             PSBT proposalPsbt = PSBT.fromString(response.trim());
-            checkProposal(psbt, proposalPsbt, changeOutputIndex, maxAdditionalFeeContribution, allowOutputSubstitution);
+            checkProposal(psbt, proposalPsbt, changeOutputIndex, maxAdditionalFeeContribution, minFeeRate, allowOutputSubstitution);
 
             return proposalPsbt;
         } catch(HttpResponseException e) {
-            Gson gson = new Gson();
-            PayjoinReceiverError payjoinReceiverError = gson.fromJson(e.getResponseBody(), PayjoinReceiverError.class);
+            PayjoinReceiverError payjoinReceiverError = getPayjoinReceiverError(e);
+            if(payjoinReceiverError == null) {
+                log.warn("Payjoin receiver returned a status of " + e.getStatusCode() + " with an unrecognised body");
+                throw new PayjoinReceiverException("The payjoin receiver returned an error (HTTP " + e.getStatusCode() + ").");
+            }
+
             log.warn("Payjoin receiver returned an error of " + payjoinReceiverError.getErrorCode() + " (" + payjoinReceiverError.getMessage() + ")");
             throw new PayjoinReceiverException(payjoinReceiverError.getSafeMessage());
         } catch(URISyntaxException e) {
@@ -104,21 +113,25 @@ public class Payjoin {
         } catch(PSBTParseException e) {
             log.error("Error parsing received PSBT", e);
             throw new PayjoinReceiverException("Payjoin receiver returned invalid PSBT", e);
+        } catch(PayjoinReceiverException e) {
+            log.error("Payjoin receiver error", e);
+            throw e;
         } catch(Exception e) {
             log.error("Payjoin error", e);
             throw new PayjoinReceiverException("Payjoin error", e);
         }
     }
 
-    private void checkProposal(PSBT original, PSBT proposal, int changeOutputIndex, long maxAdditionalFeeContribution, boolean allowOutputSubstitution) throws PayjoinReceiverException {
+    void checkProposal(PSBT original, PSBT proposal, int changeOutputIndex, long maxAdditionalFeeContribution, double minFeeRate, boolean allowOutputSubstitution) throws PayjoinReceiverException, PSBTProofException {
+        Transaction originalTx = original.getTransaction();
         Queue<Map.Entry<TransactionInput, PSBTInput>> originalInputs = new ArrayDeque<>();
         for(int i = 0; i < original.getPsbtInputs().size(); i++) {
-            originalInputs.add(Map.entry(original.getTransaction().getInputs().get(i), original.getPsbtInputs().get(i)));
+            originalInputs.add(Map.entry(originalTx.getInputs().get(i), original.getPsbtInputs().get(i)));
         }
 
         Queue<Map.Entry<TransactionOutput, PSBTOutput>> originalOutputs = new ArrayDeque<>();
         for(int i = 0; i < original.getPsbtOutputs().size(); i++) {
-            originalOutputs.add(Map.entry(original.getTransaction().getOutputs().get(i), original.getPsbtOutputs().get(i)));
+            originalOutputs.add(Map.entry(originalTx.getOutputs().get(i), original.getPsbtOutputs().get(i)));
         }
 
         // Checking that the PSBT of the receiver is clean
@@ -126,7 +139,6 @@ public class Payjoin {
             throw new PayjoinReceiverException("Global xpubs should not be included in the receiver's PSBT");
         }
 
-        Transaction originalTx = original.getTransaction();
         Transaction proposalTx = proposal.getTransaction();
         // Verify that the transaction version, and nLockTime are unchanged.
         if(proposalTx.getVersion() != originalTx.getVersion()) {
@@ -139,15 +151,15 @@ public class Payjoin {
         Set<Long> sequences = new HashSet<>();
         // For each inputs in the proposal:
         for(PSBTInput proposedPSBTInput : proposal.getPsbtInputs()) {
-            if(!proposedPSBTInput.getDerivedPublicKeys().isEmpty()) {
+            if(!proposedPSBTInput.getDerivedPublicKeys().isEmpty() || !proposedPSBTInput.getTapDerivedPublicKeys().isEmpty() || proposedPSBTInput.getTapInternalKey() != null) {
                 throw new PayjoinReceiverException("The receiver added keypaths to an input");
             }
-            if(!proposedPSBTInput.getPartialSignatures().isEmpty()) {
+            if(!proposedPSBTInput.getPartialSignatures().isEmpty() || proposedPSBTInput.getTapKeyPathSignature() != null) {
                 throw new PayjoinReceiverException("The receiver added partial signatures to an input");
             }
 
             TransactionInput proposedTxIn = proposedPSBTInput.getInput();
-            boolean isOriginalInput = originalInputs.size() > 0 && originalInputs.peek().getKey().getOutpoint().equals(proposedTxIn.getOutpoint());
+            boolean isOriginalInput = !originalInputs.isEmpty() && originalInputs.peek().getKey().getOutpoint().equals(proposedTxIn.getOutpoint());
             if(isOriginalInput) {
                 Map.Entry<TransactionInput, PSBTInput> originalInput = originalInputs.remove();
                 TransactionInput originalTxIn = originalInput.getKey();
@@ -168,6 +180,8 @@ public class Payjoin {
                 proposedPSBTInput.setWitnessUtxo(originalPSBTInput.getWitnessUtxo());
                 // We fill up information we had on the signed PSBT, so we can sign it.
                 proposedPSBTInput.getDerivedPublicKeys().putAll(originalPSBTInput.getDerivedPublicKeys());
+                proposedPSBTInput.getTapDerivedPublicKeys().putAll(originalPSBTInput.getTapDerivedPublicKeys());
+                proposedPSBTInput.setTapInternalKey(originalPSBTInput.getTapInternalKey());
                 proposedPSBTInput.getProprietary().putAll(originalPSBTInput.getProprietary());
                 proposedPSBTInput.setRedeemScript(originalPSBTInput.getFinalScriptSig().getFirstNestedScript());
                 proposedPSBTInput.setWitnessScript(originalPSBTInput.getFinalScriptWitness().getWitnessScript());
@@ -206,21 +220,27 @@ public class Payjoin {
         }
 
         TransactionOutput changeOutput = (changeOutputIndex > -1 ? originalTx.getOutputs().get(changeOutputIndex) : null);
+        Script paymentScript = payjoinURI.getAddress().getOutputScript();
 
         // For each outputs in the proposal:
         for(int i = 0; i < proposal.getPsbtOutputs().size(); i++) {
             PSBTOutput proposedPSBTOutput = proposal.getPsbtOutputs().get(i);
             // Verify that no keypaths is in the PSBT output
-            if(!proposedPSBTOutput.getDerivedPublicKeys().isEmpty()) {
+            if(!proposedPSBTOutput.getDerivedPublicKeys().isEmpty() || !proposedPSBTOutput.getTapDerivedPublicKeys().isEmpty() || proposedPSBTOutput.getTapInternalKey() != null) {
                 throw new PayjoinReceiverException("The receiver added keypaths to an output");
             }
 
             TransactionOutput proposedTxOut = proposalTx.getOutputs().get(i);
-            boolean isOriginalOutput = originalOutputs.size() > 0 && originalOutputs.peek().getKey().getScript().equals(proposedTxOut.getScript());
-            if(isOriginalOutput) {
-                Map.Entry<TransactionOutput, PSBTOutput> originalOutput = originalOutputs.remove();
+            Map.Entry<TransactionOutput, PSBTOutput> originalOutput = originalOutputs.peek();
+            boolean isOriginalOutput = originalOutput != null && originalOutput.getKey().getScript().equals(proposedTxOut.getScript());
+            boolean isPaymentOutput = originalOutput != null && originalOutput.getKey().getScript().equals(paymentScript);
+            // The receiver may have substituted the payment output with one paying to a different script
+            boolean isSubstitutedOutput = !isOriginalOutput && isPaymentOutput && allowOutputSubstitution;
+
+            if(isOriginalOutput || isSubstitutedOutput) {
+                originalOutputs.remove();
                 if(originalOutput.getKey() == changeOutput) {
-                    var actualContribution = changeOutput.getValue() - proposedTxOut.getValue();
+                    var actualContribution = originalOutput.getKey().getValue() - proposedTxOut.getValue();
                     // The amount that was subtracted from the output's value is less than or equal to maxadditionalfeecontribution
                     if(actualContribution > maxAdditionalFeeContribution) {
                         throw new PayjoinReceiverException("The actual contribution is more than maxadditionalfeecontribution");
@@ -234,34 +254,63 @@ public class Payjoin {
                     if(actualContribution > getSingleInputFee() * additionalInputsCount) {
                         throw new PayjoinReceiverException("The actual contribution is not only paying for additional inputs");
                     }
-                } else if(allowOutputSubstitution && originalOutput.getKey().getScript().equals(payjoinURI.getAddress().getOutputScript())) {
+                } else if(allowOutputSubstitution && isPaymentOutput) {
                     // That's the payment output, the receiver may have changed it.
                 } else {
                     if(originalOutput.getKey().getValue() > proposedTxOut.getValue()) {
-                        throw new PayjoinReceiverException("The receiver decreased the value of one of the outputs");
+                        throw new PayjoinReceiverException("The receiver decreased the value of one of the outputs from " + originalOutput.getKey().getValue() + " sats to " + proposedTxOut.getValue() + " sats");
                     }
                 }
 
-                PSBTOutput originalPSBTOutput = originalOutput.getValue();
-                // We fill up information we had on the signed PSBT, so we can sign it.
-                proposedPSBTOutput.getDerivedPublicKeys().putAll(originalPSBTOutput.getDerivedPublicKeys());
-                proposedPSBTOutput.getProprietary().putAll(originalPSBTOutput.getProprietary());
-                proposedPSBTOutput.setRedeemScript(originalPSBTOutput.getRedeemScript());
-                proposedPSBTOutput.setWitnessScript(originalPSBTOutput.getWitnessScript());
+                if(isOriginalOutput) {
+                    PSBTOutput originalPSBTOutput = originalOutput.getValue();
+                    // We fill up information we had on the signed PSBT, so we can sign it. A substituted output pays to a different script, so this information does not apply to it.
+                    proposedPSBTOutput.getDerivedPublicKeys().putAll(originalPSBTOutput.getDerivedPublicKeys());
+                    proposedPSBTOutput.getTapDerivedPublicKeys().putAll(originalPSBTOutput.getTapDerivedPublicKeys());
+                    proposedPSBTOutput.setTapInternalKey(originalPSBTOutput.getTapInternalKey());
+                    proposedPSBTOutput.getProprietary().putAll(originalPSBTOutput.getProprietary());
+                    proposedPSBTOutput.setRedeemScript(originalPSBTOutput.getRedeemScript());
+                    proposedPSBTOutput.setWitnessScript(originalPSBTOutput.getWitnessScript());
+                }
             }
         }
 
         // Verify that all of sender's outputs from the original PSBT are in the proposal.
         if(!originalOutputs.isEmpty()) {
-            // The payment output may have been substituted
-            if(!allowOutputSubstitution || originalOutputs.size() != 1 || !originalOutputs.remove().getKey().getScript().equals(payjoinURI.getAddress().getOutputScript())) {
+            // The payment output may have been removed without being substituted
+            if(!allowOutputSubstitution || originalOutputs.size() != 1 || !originalOutputs.remove().getKey().getScript().equals(paymentScript)) {
                 throw new PayjoinReceiverException("Some of our outputs are not included in the proposal");
             }
+        }
+
+        // Once signed, the fee rate of the payjoin transaction must not be less than the minfeerate we requested
+        double proposalFeeRate = getProposalFeeRate(original, proposal);
+        if(proposalFeeRate < minFeeRate) {
+            throw new PayjoinReceiverException("The fee rate of the payjoin transaction of " + String.format("%.2f", proposalFeeRate) + " sats/vB is less than the requested minimum of " + String.format("%.2f", minFeeRate) + " sats/vB");
         }
 
         //Add global pubkey map for signing
         proposal.getExtendedPublicKeys().putAll(psbt.getExtendedPublicKeys());
         proposal.getGlobalProprietary().putAll(psbt.getGlobalProprietary());
+    }
+
+    /**
+     * Estimates the fee rate of the payjoin transaction once the sender's inputs have been signed.
+     * The extracted proposal transaction already carries the receiver's finalized inputs, so the weight the sender still has to add
+     * is the difference between the signed and unsigned forms of the original transaction.
+     */
+    private double getProposalFeeRate(PSBT original, PSBT proposal) throws PSBTProofException {
+        Transaction signedOriginalTx = original.extractTransaction();
+        Transaction finalizedProposalTx = proposal.extractTransaction();
+        int signedWeightUnits = signedOriginalTx.getWeightUnits() - original.getTransaction().getWeightUnits();
+        if(signedOriginalTx.isSegwit() && finalizedProposalTx.isSegwit()) {
+            //Both transactions include the segwit marker and flag, so don't count them twice
+            signedWeightUnits -= 2;
+        }
+
+        double vSize = (double)(finalizedProposalTx.getWeightUnits() + signedWeightUnits) / Transaction.WITNESS_SCALE_FACTOR;
+
+        return proposal.getFee().doubleValue() / vSize;
     }
 
     private int getChangeOutputIndex() {
@@ -275,17 +324,17 @@ public class Payjoin {
         return -1;
     }
 
-    private long getAdditionalFeeContribution() {
+    private long getAdditionalFeeContribution() throws PSBTProofException {
         return getSingleInputFee();
     }
 
-    private long getSingleInputFee() {
+    private long getSingleInputFee() throws PSBTProofException {
         Transaction transaction = psbt.extractTransaction();
         double feeRate = psbt.getFee().doubleValue() / transaction.getVirtualSize();
         int vSize = 68;
 
-        if(transaction.getInputs().size() > 0) {
-            TransactionInput input = transaction.getInputs().get(0);
+        if(!transaction.getInputs().isEmpty()) {
+            TransactionInput input = transaction.getInputs().getFirst();
             vSize = input.getLength() * Transaction.WITNESS_SCALE_FACTOR;
             vSize += input.getWitness() != null ? input.getWitness().getLength() : 0;
             vSize = (int)Math.ceil((double)vSize / Transaction.WITNESS_SCALE_FACTOR);
@@ -294,8 +343,17 @@ public class Payjoin {
         return (long) (vSize * feeRate);
     }
 
+    private PayjoinReceiverError getPayjoinReceiverError(HttpResponseException e) {
+        try {
+            return new Gson().fromJson(e.getResponseBody(), PayjoinReceiverError.class);
+        } catch(JsonSyntaxException jse) {
+            return null;
+        }
+    }
+
     private static class PayjoinReceiverError {
-        Map<String, String> knownErrors = ImmutableMap.of(
+        //Must be static so it cannot be overridden by the deserialized receiver response
+        private static final Map<String, String> KNOWN_ERRORS = ImmutableMap.of(
                 "unavailable", "The payjoin endpoint is not available for now.",
                 "not-enough-money", "The receiver added some inputs but could not bump the fee of the payjoin proposal.",
                 "version-unsupported", "This version of payjoin is not supported.",
@@ -314,7 +372,7 @@ public class Payjoin {
         }
 
         public String getSafeMessage() {
-            String message = knownErrors.get(errorCode);
+            String message = KNOWN_ERRORS.get(errorCode);
             return (message == null ? "Unknown Error" : message);
         }
     }
@@ -331,7 +389,7 @@ public class Payjoin {
         @Override
         protected Task<PSBT> createTask() {
             return new Task<>() {
-                protected PSBT call() throws PayjoinReceiverException {
+                protected PSBT call() throws PayjoinReceiverException, PSBTProofException {
                     return payjoin.requestPayjoinPSBT(allowOutputSubstitution);
                 }
             };
